logs/gabbi-html.log
Listing '.'...
Listing './bin'...
Compiling './bin/jsonpath.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/_pytest'...
Listing './lib/python3.5/site-packages/_pytest/_code'...
Listing './lib/python3.5/site-packages/_pytest/assertion'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/attr'...
Listing './lib/python3.5/site-packages/attrs-17.4.0.dist-info'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.9.dist-info'...
Listing './lib/python3.5/site-packages/cssselect'...
Listing './lib/python3.5/site-packages/cssselect-1.0.3.dist-info'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/extras'...
Listing './lib/python3.5/site-packages/extras/tests'...
Listing './lib/python3.5/site-packages/extras-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/fixtures'...
Listing './lib/python3.5/site-packages/fixtures/_fixtures'...
Listing './lib/python3.5/site-packages/fixtures/tests'...
Listing './lib/python3.5/site-packages/fixtures/tests/_fixtures'...
Listing './lib/python3.5/site-packages/fixtures-3.0.0.dist-info'...
Listing './lib/python3.5/site-packages/gabbi'...
Listing './lib/python3.5/site-packages/gabbi/handlers'...
Listing './lib/python3.5/site-packages/gabbi/tests'...
Listing './lib/python3.5/site-packages/gabbi/tests/gabbits_inner'...
Listing './lib/python3.5/site-packages/gabbi/tests/gabbits_intercept'...
Listing './lib/python3.5/site-packages/gabbi/tests/gabbits_live'...
Listing './lib/python3.5/site-packages/gabbi/tests/gabbits_runner'...
Listing './lib/python3.5/site-packages/gabbi/tests/gabbits_runner/subdir'...
Listing './lib/python3.5/site-packages/gabbi/tests/gabbits_unsafe_yaml'...
Listing './lib/python3.5/site-packages/gabbi/tests/test_gabbits'...
Listing './lib/python3.5/site-packages/gabbi/tests/warning_gabbits'...
Listing './lib/python3.5/site-packages/gabbi-1.40.0.dist-info'...
Listing './lib/python3.5/site-packages/gabbi_html'...
Listing './lib/python3.5/site-packages/gabbi_html-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/jsonpath_rw'...
Listing './lib/python3.5/site-packages/jsonpath_rw/bin'...
Listing './lib/python3.5/site-packages/jsonpath_rw-1.4.0.egg-info'...
Listing './lib/python3.5/site-packages/jsonpath_rw_ext'...
Listing './lib/python3.5/site-packages/jsonpath_rw_ext/tests'...
Listing './lib/python3.5/site-packages/jsonpath_rw_ext-1.1.3.dist-info'...
Listing './lib/python3.5/site-packages/linecache2'...
Listing './lib/python3.5/site-packages/linecache2/tests'...
Listing './lib/python3.5/site-packages/linecache2-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pluggy'...
Listing './lib/python3.5/site-packages/pluggy-0.6.0.egg-info'...
Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.10.egg-info'...
Listing './lib/python3.5/site-packages/py'...
Listing './lib/python3.5/site-packages/py/_code'...
Listing './lib/python3.5/site-packages/py/_io'...
Listing './lib/python3.5/site-packages/py/_log'...
Listing './lib/python3.5/site-packages/py/_path'...
Listing './lib/python3.5/site-packages/py/_process'...
Listing './lib/python3.5/site-packages/py/_vendored_packages'...
Listing './lib/python3.5/site-packages/py-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/pytest-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/python_mimeparse-1.6.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/testtools'...
Compiling './lib/python3.5/site-packages/testtools/_compat2x.py'...
***   File "./lib/python3.5/site-packages/testtools/_compat2x.py", line 16
    raise exc_class, exc_obj, exc_tb
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/testtools/matchers'...
Listing './lib/python3.5/site-packages/testtools/testresult'...
Listing './lib/python3.5/site-packages/testtools/tests'...
Listing './lib/python3.5/site-packages/testtools/tests/matchers'...
Listing './lib/python3.5/site-packages/testtools/tests/twistedsupport'...
Listing './lib/python3.5/site-packages/testtools/twistedsupport'...
Listing './lib/python3.5/site-packages/testtools-2.3.0.dist-info'...
Listing './lib/python3.5/site-packages/traceback2'...
Listing './lib/python3.5/site-packages/traceback2/tests'...
Listing './lib/python3.5/site-packages/traceback2-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/unittest2'...
Listing './lib/python3.5/site-packages/unittest2/test'...
Listing './lib/python3.5/site-packages/unittest2-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/wsgi_intercept'...
Listing './lib/python3.5/site-packages/wsgi_intercept/tests'...
Listing './lib/python3.5/site-packages/wsgi_intercept-1.6.0.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
